# RoundView-AIS-Fusion

./: .clangd  .cursorignore  .dockerignore  .gitignore  .gitmodules  Dockerfile  ONNX转换修复说明.md  README.md  REFACTOR_SUMMARY.md  YOLO模型兼容性问题修复说明.md  compile_commands.json  pyrightconfig.json  requirements.txt  utils_onnx_fixed.py  utils_onnx_fixed_v2.py  utils_onnx_yolo_export.py  多进程隔离的混合栈修改目标.md  快速测试.sh  标准的 ROS2 开源软件包分发方式.md
.cache/clangd/index/: JH_ros2_stitch_node.cpp.8268D91D57810F07.idx  JH_rtsp.cpp.098EA8CBF0C71B94.idx  JH_stitcher.cpp.514425521ACD7338.idx  JHstitcher.hpp.4C232A2E5D3FB4A3.idx  __locale_t.h.EFD2EEF88C7BC9DC.idx  __stddef_max_align_t.h.C8F9B6986FB790BB.idx  affine.hpp.CA0C76DF34914492.idx  all_indices.h.5108A2C59BEB57C2.idx  alloca.h.B3C3404035C15EA6.idx  allocator.h.096E220A6B294325.idx  allocator.h.59B0D9F7A1366406.idx  allocator.h.B3AD8FBE7B7D9FB9.idx  allocator_common.hpp.54671878FC07C27A.idx  allocator_deleter.hpp.A079615F55E74032.idx  any.h.AD1A3EDC7F3AD5CE.idx  any_executable.hpp.0DB733D55DB45A10.idx  any_service_callback.hpp.6851D815CC7CF78F.idx  any_subscription_callback.hpp.9182C69AB1EC70A9.idx  approximate_time.h.40EFC48D73BB0073.idx  arguments.h.AC56E639F3AF820E.idx  array_list.h.61B505472EEBBAE2.idx  aruco_board.hpp.EA34EDBD27F9ED0C.idx  aruco_detector.hpp.E3EB294A6FC36244.idx  aruco_dictionary.hpp.71FBC61E2F90E482.idx  assert.h.F44EF353D67C7E11.idx  async.hpp.4285D175E13A773D.idx  atomic_wide_counter.h.3E10DD82C6CABCC3.idx  autocalib.hpp.1440AEFA138675C7.idx  autotuned_index.h.1D3637AE53C49345.idx  background_segm.hpp.14D0BBCE03697CC9.idx  barcode.hpp.388F4A756204C941.idx  base.hpp.935FFF30193A0A2A.idx  blenders.hpp.2BF7AA61D767A70C.idx  bounded_vector.hpp.566CE0A87FB7BC66.idx  buffer_implementation_base.hpp.88F9405FCCB6233C.idx  bufferpool.hpp.6FA9B1F65F1A0550.idx  byteswap.h.94242F347BA9D8AE.idx  calib3d.hpp.828AADF6746211EE.idx  callback_group.hpp.30FE91A1D6374804.idx  camera.hpp.CC79919AE2D66ED2.idx  (+596 more)
backup/: backup_JH_ros2_stitch_node.cpp  backup_JH_rtsp.cpp
scripts/: run_stitch_track_offline.sh  run_stitch_track_realtime.sh
src/ais_interfaces/: CMakeLists.txt  package.xml
src/ais_interfaces/msg/: AIS.msg  AISContact.msg  AidsToNavigation.msg  Contact.msg
src/ais_tools/: package.xml  setup.cfg  setup.py
src/ais_tools/ais_tools/: ais_contact_tracker.py  ais_parser.py  nmea_relay.py  nmea_replay.py
src/ais_tools/launch/: ASM_log.launch.py  ASM_series.launch.py
src/ais_tools/messages/: ais_parser.txt  nmea_replay.txt
src/dataset_recorder/: README.md  ais_receiver.py  camera_receiver.py  config.yaml  config_manager.py  config_template.yaml  data_storage.py  gnss_receiver.py  main.py  rtk_receiver.py
src/detect_interfaces/: CMakeLists.txt  package.xml  消息示例.txt
src/detect_interfaces/msg/: DetectionResult.msg  MultiDetectionResults.msg  MultiDetectionsCameras.msg
src/detect_interfaces/srv/: GetCameraParams.srv
src/image_pipeline/: 该标定工具包的使用说明.md
src/image_stitching_pkg/: CMakeLists.txt  package.xml
src/image_stitching_pkg/config/: CameraParams_DeaultSet.yaml  CameraParams_LongDistance.yaml  CameraParams_MidDistance.yaml  CameraParams_SiteTest.yaml  CameraParams_Test.yaml  CameraParams_TestSet.yaml  JH_rtsp_config.yaml  JH_stitch_config.yaml  calibration_result_1.yaml  calibration_result_2.yaml  相机参数
src/image_stitching_pkg/include/image_stitching_pkg/: JH_FeatherStitcher.hpp  JH_SeamStitcher.hpp  JHstitcher.hpp
src/image_stitching_pkg/launch/: JH_ASM_DS_launch.py  JH_ASM_record_rtsp_ais_launch.py  JH_ASM_record_rtsp_launch.py  JH_ASM_rosbag_launch.py  JH_ASM_rtsp_launch.py  JH_Stitch_Detect_launch.py  JH_Stitch_Track_Offline_launch.py  JH_Stitch_Track_Realtime_launch.py  JH_Stitch_Track_launch.py  JH_Stitch_launch.py  JH_yolo_launch.py  image_stitching_launch.py  image_stitching_node.py
src/image_stitching_pkg/launch/wasted_launch/: JH_ASM_rosbag_launch.py  JH_ASM_rtsp_launch.py  JH_ros_stitcher_launch.py  JH_rosbag_launch.py  JH_rqt_launch.py  使用说明.txt
src/image_stitching_pkg/src/: JH_FeatherStitcher.cpp  JH_SeamStitcher.cpp  JH_ros2_stitch_node.cpp  JH_ros2_stitch_node_backup.cpp  JH_rtsp.cpp  JH_stitcher.cpp  JH_stitcher2.cpp  module_euler_R.py  module_motion_refresh.cpp  module_test_rtsp_stitch.cpp  module_test_stitchfunction.cpp  module_tune_camera_params.py  module_ultimate_stitching.cpp  ultimate_stitching.cpp
src/marnav_ais/: CMakeLists.txt  DEBUG_GUIDE.md  README_v2.md  geographiclib说明.txt  marnavOK geographiclib库的安装.txt  package.xml
src/marnav_ais/src/: ais_parser_batch_pub_node.cpp  ais_parser_node.cpp  ais_parser_pub_node.cpp  backup_ais_parser_node.cpp  basic_ais_parser_node.cpp  gnss_parser_pub_node.cpp
src/marnav_interfaces/: CMakeLists.txt  package.xml
src/marnav_interfaces/msg/: Ais.msg  AisBatch.msg  AisVis.msg  Gga.msg  Gnss.msg  Rmc.msg  VisiableTra.msg  VisiableTraBatch.msg
src/marnav_vis/: README_CONFIG.md  colcon.pkg  package.xml  setup.cfg  setup.py  思路.txt
src/marnav_vis_cpp/: CMakeLists.txt  VIS_utils_完成总结.md  VIS_utils_实现说明.md  package.xml
src/marnav_vis_cpp/config/: calibration_result_0.yaml  camera_0_param_location.txt  track_offline_config.yaml  track_realtime_config.yaml
src/marnav_vis_cpp/include/deep_sort/: datatype.h
src/marnav_vis_cpp/include/marnav_vis_cpp/: AIS_utils.h  VIS_utils.h  yolo_onnx.h
src/marnav_vis_cpp/launch/: Assemble_track_debug_launch.py  Assemble_track_realtime_launch.py
src/marnav_vis_cpp/src/: AIS_utils.cpp  DeepSORVF_ros.cpp  VIS_utils.cpp  ckpt_onnx.cpp  yolo_example.cpp  yolo_onnx.cpp
src/marnav_vis_cpp/test/: ckpt_feature.txt
src/mycustface/: CMakeLists.txt  package.xml
src/mycustface/msg/: Header.idl  ImageMsg.msg  JHjpg.idl  MyCustomMsg.msg  MyMessage.idl
src/webcamcalib/: package.xml  setup.cfg  setup.py  使用说明.txt
src/yolo_detect/: package.xml  setup.py
src/yolo_detect/yolo_detect/: detection_saver.py  timesync_test.py  yolo_inference_node_1.py  yolo_inference_node_2.py  yolo_inference_node_3.py  yolo_inference_node_3_backup.py
总结文件/: 代码检查报告.md  优化总结.md  发布函数性能分析.md  性能优化测试指南.md  拼接器耗时波动PERFORMANCE_ANALYSIS.md
(+150 files in other folders)
