cmake_minimum_required(VERSION 3.8)
project(mycustface)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

set(msg_files
  "msg/MyCustomMsg.msg"
  "msg/ImageMsg.msg"
  "msg/MyMessage.idl"
  "msg/Header.idl"
  "msg/JHjpg.idl"
)

rosidl_generate_interfaces(${PROJECT_NAME}
#${idl_files}
${msg_files}
  DEPENDENCIES builtin_interfaces
  sensor_msgs
  # 如果有其他依赖，请在这里列出
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_dependencies(rosidl_default_runtime)

ament_package()